# Compressed-Video-Reader

./: .gitignore  CMakeLists.txt  README.md  install.sh  setup.py
ffmpeg/: install_ffmpeg.sh
ffmpeg/ffmpeg_patch/: h264idct_template.c  patch.sh  yuv2rgb.c
src/cv_reader/: __init__.py  __main__.py  api.cpp  reader.py
